# turkish-treebanks

./: .gitattributes  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  WORKSPACE  WORKSPACE.bazel  requirements.txt  setup.py  setup.sh
.github/workflows/: linux.yml  python.yml
data/: BUILD.bazel  web.conllu
lib/: BUILD.bazel  read.py  read_test.py
turkish_treebanks/: BUILD.bazel  read.py  read_test.py  twt.proto
