# Copyright 2020 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

workspace(name = "google_research_turkish_treebanks")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Google protocol buffers.
http_archive(
    name = "com_google_protobuf",
    sha256 = "88231778cffebf93bc905e76ea757fae0f2ef497cc00f64973e41f1acd4fc781",
    strip_prefix = "protobuf-3.20.2",
    urls = [
        "https://github.com/protocolbuffers/protobuf/archive/v3.20.2.tar.gz",
    ],
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

# Bazel Python rules.
http_archive(
    name = "rules_python",
    sha256 = "b593d13bb43c94ce94b483c2858e53a9b811f6f10e1e0eedc61073bd90e58d9c",
    strip_prefix = "rules_python-0.12.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.12.0.tar.gz",
)

# PyPi dependencies.
load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
    name = "turkish_treebanks_deps",
    requirements = "//:requirements.txt",
)
