# Copyright 2020 The Google Research Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@pypi//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

exports_files(["__init__.py"])

py_proto_library(
    name = "twt_py_pb2",
    srcs = ["twt.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
)

py_library(
    name = "read",
    srcs = ["read.py"],
    data = [
        ":twt_py_pb2",
        "//data:turkish_treebanks",
    ],
    srcs_version = "PY3",
)

py_test(
    name = "read_test",
    size = "medium",
    srcs = ["read_test.py"],
    python_version = "PY3",
    srcs_version = "PY3",
    deps = [
        ":read",
        ":twt_py_pb2",
        requirement("absl-py"),
    ],
)
